--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,3 +1,13 @@
+[production]
 > 1%
-last 2 versions
-not dead
+# ie 10
+
+##  [modern]
+# last 1 chrome version
+# last 1 firefox version
+
+# [ssr]
+# node 12
+
+Android 4.1
+iOS 8.1
