--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.2.1",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
