--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dayjs": "^1.10.4",
     "lodash": "^4.17.20",
     "qs": "^6.9.4",
+    "tb-skeleton": "^0.3.6",
     "uuid": "^8.3.2",
     "vant": "^2.11.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-meta-info": "^0.1.7",
     "vue-router": "^3.2.0",
+    "vue-to-copy": "^0.1.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
